fix Update & Install wrapping

--- a/ui/pages/permissions-connect/flask/snap-update/index.scss
+++ b/ui/pages/permissions-connect/flask/snap-update/index.scss
@@ -27,10 +27,9 @@
   .page-container__footer {
     width: 100%;
     margin-top: 12px;
-    font-size: 14px;
 
     button {
-      padding: 0.75rem;
+      font-size: 0.8rem;
     }
   }
 }
